--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
-.link { 
-	stroke: #ccc; 
+.link {
+	stroke: #444;
 }
 
 .nodetext {
- pointer-events: none; font: 10px sans-serif; 
+ pointer-events: none; font: 10px sans-serif;
+}
+
+.handletext {
+	font: 18px sans-serif;
+}
+
+.handlenotset {
+
 }
 
 body {
- width:100%; height:100%; margin:none; padding:none; 
+ width:100%; height:100%; margin:none; padding:none;
 }
 
 #graph {
- width:500px;height:500px; border:3px solid black;border-radius:12px; margin:auto; 
+ width:500px;height:500px; border:3px solid black;border-radius:12px; margin:auto;
 }
