--- a/style.css
+++ b/style.css
@@ -20,4 +20,7 @@ body {
 
 #graph {
  width:500px;height:500px; border:3px solid black;border-radius:12px; margin:auto;
+ position: absolute;
+ top: 0;
+ right: 0;
 }
